# chess-bitboard

./: .gitignore  Cargo.toml
src/: bitboard.rs  lib.rs
src/tests/: bitboard_tests.rs  mod.rs
